@@ -4,9 +4,9 @@ AUX tlp-usblist-print-unknown-if-device-desc-is-empty.patch 946 SHA256 a05701907
 DIST tlp-gentoo-additions-0.3.7.1.tar.bz2 9073 SHA256 0f139b54adaf5a340cf200d7ee8602e53f94558f94d430d043e907985c4d3a67 SHA512 0a56ea1b7270c8ea5fe1157ae64f42da67e79e02243bf33bffba825b5b53628bace31ab00b3b0448dde00a2db215d7c5012ae4774552f1c4ff0e7e197d45600b WHIRLPOOL dea2a3c80f55945d6b76d8ee8a8b9d9cd27877314fddc0145d0886516b9c274c124c365274845d40a7f091fe7304b2a69827d136aefa75ce53b89e4905814c51
 DIST tlp-gentoo-additions-0.3.8.1.tar.bz2 9227 SHA256 b04e22b5a5c63665ef742ca88a100694f21072e80162c34a4a7ef00367681343 SHA512 cc44e8dfc1f7e103df89c5b80e1f1f7de0fecf022eafaa497d733980cf0396ca136356ff5606cbafe693a05b7c2c315858b007acd26fa01728efc061ab2cab07 WHIRLPOOL 7f201107509da020dbe7d5e223cafb2f5ee70e73dde21f14c786f9b9eb76970e9bcecf39c5ecbdc3815b29808e7c120660ce141927492e8e4e8d788cd7d456e6
 DIST tlp-gentoo-additions-0.3.9.tar.bz2 9209 SHA256 3e82e50c4f673ee3225f58aae90cac2eb04fdca4293572da09411dbbebe0f51b SHA512 cfef43fb3993a021520d7b6571d31b27130a1c58851c93cd1b8b936a1d73a7362f9d084553baf2675558b29a8d1dab5f119420b1e62a19e8a834d35776db1953 WHIRLPOOL e7c387cc2b377dfa345bc491fa941de7d95da0354b3b60e13dbd68c433d25d7e37ab0a1f8ad89b166d05054b5b10977869b0792f1dd9d35fd5a50c0ffd2e91ff
-EBUILD tlp-0.3.7.1.ebuild 5530 SHA256 8548e5cd49d3ef47544c8258556abb8ea231829d3581513eea5df17c3327ccbb SHA512 9d5179aa4029d3aa590a15a28ca56f1eba2f5224f695f8ce582a38a633f1aa30360c27dc88f16b79cc910f9f40ed36c482c14c7eab23a3d566965e5f2ca784a2 WHIRLPOOL 363dda25b48c13f07c6561493aa3a5534b0c75f03ce6dfb813fb191b39444ec9b973f2fc047a9105f79f2c05f3716ae5773456dd4235bc4107258e2045d64042
-EBUILD tlp-0.3.8.1.ebuild 5712 SHA256 7eb7b8de9675be318dd50c8d1a7c4d1971bdc2317639db2137a4e17d226a2531 SHA512 068140a1235c408ec58f2c74fed58e408e3cc9f65ec5389bd71bb5bdb1872f52a15b419f93462934bd3dc08cca2e071cbb8fa68049219893d58283e29f878379 WHIRLPOOL 2e03062f843b15d139660ccdf879d49bd767ef65742140fb2c1ca6f61dceba9426770bbda836b63e8c1b5276ae61ef3b4cbc08956c214ea6196aad5b587d82f5
-EBUILD tlp-0.3.9.900_pre20130730.ebuild 5958 SHA256 e2396138646d6e4ebc97072e8e189b5846123f034980ce21e947dbc759704758 SHA512 29130ed6658499f4b62f98ef5aa161f395a2802d02146bd7d8faf7e0bf78629e978a6b19ba8142fb66bcde60eac05b2e2d68d4d1681aa46bf7fa7c3a56a1e868 WHIRLPOOL f5fa56a8052a75e41597920b9c688cb750da650428dba8f48da23af65f8db278a1162ee973a4697ddca7091ba14d17a3920452320e33ceff15ca13618d16270f
-EBUILD tlp-0.3.9.ebuild 5746 SHA256 8efa29f88820d66f21c51a3624c11e8bbf66c25195dd94abd05bf1561747b38b SHA512 81f340a19a659d94bb7a6aae1e6abd45490618ba6b28a870ae80ae104cac1daba85c5889ee44753face5458744bf87503d2c09292b41c2a855d57e9b2f2679a0 WHIRLPOOL adf316b6e083a7fd75206b172fb41e427d0beda39d6de711db5824f4b2f661a27bceba8f63c8e84f4cf4a8b9331ad13a9d85b9556ecd1b0b8e73be22aceb13ab
-MISC ChangeLog 7009 SHA256 e666a0e6dcfeb4e3d59f8c66992d04f3d1830222612bf5dc81223015b66b376e SHA512 5da7170c494b2778b76ca6e93f63cf52d1d62b207bdeb510343711171a049ed4c7efb22ff5ccd04714d73f342bb25cede3ecab76d4ffcdb652241b3fdde1cb75 WHIRLPOOL 4554048001fee66f561d8ee6daf51b47f8030a9dfd640eb3b9accaed8cdd8b26c1b940a366b2e2c73eba3f09732b9cf2dd5ee234c4950b3f745eef26baa3530d
+EBUILD tlp-0.3.7.1.ebuild 5536 SHA256 20627562c4aaffbc8c1880c27efcce0c72c9e4e85955657f4eed25e5b0cc8c3d SHA512 a9e84f5ba81c25a1ea472108fe3880d11edf69665bffbfeae5b015e0e2dfe3ff329320b682b3230a95f23b937a0dbd9e263f9e7bd48517b2685bbd0216a83ba4 WHIRLPOOL 43cbff56ccd6d5463bb9a3dce40bca89a0599b9f76709fea46b17451adbb8ee4e5eb7f70ae2a7f9f05d28753fe2056bb112929b84bd378b962e078a93d048c03
+EBUILD tlp-0.3.8.1.ebuild 5718 SHA256 f10981957ea2d21be73723804e77e495c3d32ba4241afd972e849213768de6d1 SHA512 91fc479eef7704332c6d4ab2228ef049a399ca950ccbf3ec9ff3a744b9751380084895eb1dc3620336c6fa81ec831c4cf6304f66515be3360fb48a5b1937ed46 WHIRLPOOL 5ddca76473a1a9e1271c2eab48d7da70870669ec20a915e053422067a4d7c2ab6eff0e78507ad989c9b1458cdacf17b5658b3ba041575c57efe87c5978f9a45e
+EBUILD tlp-0.3.9.900_pre20130730.ebuild 5964 SHA256 164218f7c504358616af1a51160914bab6fd603694b9be0516cac43ed0688479 SHA512 71e59490ff74a29b5820de98176f66f1a4bec3707949e64060a9c266419e5f0859d6c43c2bd62f5b1ae9a36e5f657bd02d5ed99360313ae97609551546666b74 WHIRLPOOL 01912535116034423c7003e576f41c8d1a736c43edfe0b6a86d039ec92cf4e735a068ef3a64e284114d5819b940a880a37a445d3e131dabbe01e0b07bd3f80ba
+EBUILD tlp-0.3.9.ebuild 5752 SHA256 141c140eff808f8d39981f3d1b46e216a807f76ef1a36ff62d5658c816027983 SHA512 9f3cf9d7fef6c65d3a7ceaf829cdf5f39cb43cc78ac7b8238fa5610fb2a2fd62966c9ac6d5f03395bf0a4c618ae472cff41960e839029602ca3f054685592326 WHIRLPOOL eec311643fe71a51243e8049ae821894a71e2bd161733091572e2f6b69717250e99f4434a65088e9137465d690a350aed5adf4e773490fefec1473a70a385ca7
+MISC ChangeLog 7273 SHA256 f1f0c0005140f9a1c4534f34a3d6a58148a25a7bd11208298de4f24d8e738983 SHA512 a8d574ff3b703b9705445afa3689ab296eea902f2275b04c7a2beda775ac26244937760e2123b5a872274958c78b8dba16376505422d0abd66358cd9edd5367f WHIRLPOOL 080a1e9994f92efd5d90d9e4b9ea1cef3df3228855297377078f777a33be4ef3c13342a300c32d4e26d27b135ac5419f5f10c2b828c550ed9b9b0673bec05a5f
 MISC metadata.xml 1691 SHA256 fdfca8125ccdbc41454ee45f2047fb48d64d7e91559ee632b0f9429998fe2ced SHA512 24a4630f91705f6898b8091a37e712ef81356846b39c843725e3dfc1f413f690450c4638f0c049cdebd3af20bb2e52a0b7cc1a20e204e9a5a113efb757911a97 WHIRLPOOL 52ad6e53118146ef27435d93bc4d2937ad74d75dcd220b56ae0e09a13539d079bdc73cae16fdccab18c8448fdf77740e9fd382cc55f509336f34439241e79d63
