@@ -2,6 +2,14 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Sep 2013; Andre Erdmann <dywi@mailerd.de>
+  tlp-0.3.7.1.ebuild,
+  tlp-0.3.8.1.ebuild,
+  tlp-0.3.9.900_pre20130730.ebuild,
+  tlp-0.3.9.ebuild:
+  Default to USE+=tpacpi-bat, app-laptop/tpacpi-bat-1 is too old for TLP,
+  upstream issue #44 (reported by MK-42).
+
   04 Aug 2013; Andre Erdmann <dywi@mailerd.de>
   tlp-0.3.7.1.ebuild,
   tlp-0.3.8.1.ebuild,
